--- a/Page 3.html
+++ b/Page 3.html
@@ -15,10 +15,7 @@
 </head>
 <body>
   <div class="header-NU">
-    
     <i class="fa-solid fa-arrow-left"></i>
-
-    
   </div>
   
   <nav class="navbar">
@@ -40,10 +37,10 @@
     </form>
     </div>
   </div>
-  <div class="back-header">
+  
+  <footer class="footer">
     <p>National University</p>
-    <br>
-  </div>
+  </footer>
 
 <style>
     body{
@@ -153,9 +150,7 @@ button {
     cursor: pointer;
     width: 100%;
 }
-
-
-
+  
 .form{
   width: 80%;
   margin:auto;
@@ -174,8 +169,7 @@ button {
   font-size: 15px;
   margin-bottom:20px;
   border-radius: 10px;
-  border: 2px solid #646464;
-  
+  border: 2px solid #646464; 
   outline:none;
 }
 
@@ -196,14 +190,16 @@ button {
   background-color: #c08549;
 }
 
-.back-header{
+.footer {
   background-color: rgb(54,64,142);
   font-size: 30px;
   padding-left: 3%;
   color: white;
   font-size: 30px;
   font-weight: 800;
-  justify-content: center;
+  position:fixed;
+  bottom: 0;
+  width: 100%;
 
 }
 </style>
